[gd_scene load_steps=13 format=1]

[ext_resource path="res://scripts/mainmenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/field.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/shaders/blur.tres" type="CanvasItemMaterial" id=3]
[ext_resource path="res://assets/gui_themes/main.tres" type="Theme" id=4]
[ext_resource path="res://assets/shaders/wavy.tres" type="CanvasItemMaterial" id=5]
[ext_resource path="res://assets/sprites/logo.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/portrait/human.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/portrait/monster.png" type="Texture" id=8]
[ext_resource path="res://assets/sounds/button.wav" type="Sample" id=9]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.0941176, 0.0784314, 0.145098, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = false
draw_bg = true

[sub_resource type="Animation" id=2]

resource/name = "start"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("HumanPortrait:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 800, 152 ), Vector2( 544, 152 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MonsterPortrait:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( -256, 152 ), Vector2( 0, 152 ) ]
}

[sub_resource type="SampleLibrary" id=3]

samples/button = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}

[node name="MainMenu" type="Node"]

script/script = ExtResource( 1 )

[node name="Field" parent="." instance=ExtResource( 2 )]

[node name="Menu" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="BackgroundBlur" type="ColorFrame" parent="Menu"]

material/material = ExtResource( 3 )
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 72.0
margin/right = 0.0
margin/bottom = 72.0
color = Color( 1, 1, 1, 1 )

[node name="Panel" type="Panel" parent="Menu"]

editor/display_folded = true
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 4 )
margin/left = 128.0
margin/top = 112.0
margin/right = -128.0
margin/bottom = -112.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 12.0
margin/right = 12.0
margin/bottom = 12.0
custom_constants/separation = 16
alignment = 1

[node name="StartButton" type="Button" parent="Menu/Panel/VBoxContainer"]

rect/min_size = Vector2( 128, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 2
margin/left = 52.0
margin/top = 28.0
margin/right = 180.0
margin/bottom = 52.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start"
flat = false

[node name="HowToButton" type="Button" parent="Menu/Panel/VBoxContainer"]

rect/min_size = Vector2( 128, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 2
margin/left = 52.0
margin/top = 68.0
margin/right = 180.0
margin/bottom = 92.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "How To Play"
flat = false

[node name="SettingsButton" type="Button" parent="Menu/Panel/VBoxContainer"]

rect/min_size = Vector2( 128, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 2
margin/left = 52.0
margin/top = 108.0
margin/right = 180.0
margin/bottom = 132.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Settings"
flat = false

[node name="QuitButton" type="Button" parent="Menu/Panel/VBoxContainer"]

rect/min_size = Vector2( 128, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 2
margin/left = 52.0
margin/top = 148.0
margin/right = 180.0
margin/bottom = 172.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false

[node name="TopPanel" type="Panel" parent="Menu"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 4 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 72.0

[node name="BottomPanel" type="Panel" parent="Menu"]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 4 )
margin/left = 0.0
margin/top = 72.0
margin/right = 0.0
margin/bottom = 0.0

[node name="Logo" type="TextureFrame" parent="Menu"]

material/material = ExtResource( 5 )
anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 240.0
margin/top = 0.0
margin/right = -240.0
margin/bottom = 128.0
texture = ExtResource( 6 )
stretch_mode = 4

[node name="HumanPortrait" type="TextureFrame" parent="Menu"]

anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 328.0
margin/right = -256.0
margin/bottom = 72.0
texture = ExtResource( 7 )
stretch_mode = 4

[node name="MonsterPortrait" type="TextureFrame" parent="Menu"]

anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -256.0
margin/top = 328.0
margin/right = 0.0
margin/bottom = 72.0
texture = ExtResource( 8 )
stretch_mode = 4

[node name="HowToPopup" type="PopupPanel" parent="Menu"]

editor/display_folded = true
visibility/visible = false
anchor/top = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 4 )
margin/left = 0.0
margin/top = 112.0
margin/right = 256.0
margin/bottom = -112.0
popup/exclusive = false

[node name="ScrollContainer" type="ScrollContainer" parent="Menu/HowToPopup"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 12.0
margin/right = 12.0
margin/bottom = 12.0
scroll/horizontal = false
scroll/vertical = true

[node name="Panel" type="Panel" parent="Menu/HowToPopup/ScrollContainer"]

rect/min_size = Vector2( 0, 248 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 232.0
margin/bottom = 248.0
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="Menu/HowToPopup/ScrollContainer/Panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 4.0
margin/top = 4.0
margin/right = 4.0
margin/bottom = 4.0
text = "How To Play

Select controllers for each team (either Player or CPU), and select a map to play on.

When it is your turn use the left mouse button to select a unit, and the right mouse button to move or attack with it. Once a unit has moved fully or attacked, it can no longer be controlled until your next turn. You can end your turn early by clicking the \"End Turn\" button.

Each team has one unit that can fly over water, and one unit that can attack from 2 tiles away. Units with greater speed can attack twice if they're attacking a slow unit."
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SettingsPopup" type="PopupPanel" parent="Menu"]

editor/display_folded = true
visibility/visible = false
anchor/left = 1
anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 4 )
margin/left = 256.0
margin/top = 112.0
margin/right = 0.0
margin/bottom = -112.0
popup/exclusive = false

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/SettingsPopup"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 12.0
margin/right = 12.0
margin/bottom = 12.0
custom_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="Menu/SettingsPopup/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 57.0
margin/right = 232.0
margin/bottom = 66.0
text = "Settings"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MusicSlider" type="HSlider" parent="Menu/SettingsPopup/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 98.0
margin/right = 232.0
margin/bottom = 104.0
range/min = 0.0
range/max = 10.0
range/step = 1.0
range/page = 0.0
range/value = 10.0
range/exp_edit = false
range/rounded = true
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="Label" type="Label" parent="Menu/SettingsPopup/VBoxContainer/MusicSlider"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -14.0
margin/right = 68.0
margin/bottom = -5.0
text = "Music Volume"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SoundSlider" type="HSlider" parent="Menu/SettingsPopup/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 136.0
margin/right = 232.0
margin/bottom = 142.0
range/min = 0.0
range/max = 10.0
range/step = 1.0
range/page = 0.0
range/value = 5.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="Label" type="Label" parent="Menu/SettingsPopup/VBoxContainer/SoundSlider"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -14.0
margin/right = 68.0
margin/bottom = -5.0
text = "Sound Volume"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/start = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "start"

[node name="SFX" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 3 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="pressed" from="Menu/Panel/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]

[connection signal="pressed" from="Menu/Panel/VBoxContainer/HowToButton" to="." method="_on_HowToButton_pressed"]

[connection signal="pressed" from="Menu/Panel/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]

[connection signal="pressed" from="Menu/Panel/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]

[connection signal="value_changed" from="Menu/SettingsPopup/VBoxContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]

[connection signal="value_changed" from="Menu/SettingsPopup/VBoxContainer/SoundSlider" to="." method="_on_SoundSlider_value_changed"]


